# FreeCAD-Android

./: COPY_STATUS.md  README.md  metadata.json  settings.gradle.kts
.github/workflows/: materialize-native-v07.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BrepIo.cpp  BrepIo.hpp  CMakeLists.txt  CadCore.hpp  CadCoreScripting.cpp  MeshData.cpp  MeshData.hpp  NativeCadEngine.cpp  NativeCadEngine.hpp  OcctMesher.hpp  StepIo.hpp  freecad_jni.cpp
app/src/main/java/com/medinaparra/freecadandroid/: FreeCadApplication.kt  MainActivity.kt
app/src/main/java/com/medinaparra/freecadandroid/importer/: CadFileImporter.kt  ImportState.kt  ImportTransaction.kt  TemporaryCadFile.kt
app/src/main/java/com/medinaparra/freecadandroid/nativebridge/: CadImportResult.kt  FreeCadNative.kt  MacroExecutionResult.kt  NativeCapabilities.kt  NativeSceneMesh.kt
app/src/main/java/com/medinaparra/freecadandroid/ui/: MainScreen.kt  MainScreenFiles.kt
app/src/main/java/com/medinaparra/freecadandroid/viewer/: CadGLSurfaceView.kt  CadRenderer.kt  CameraController.kt
app/src/main/java/com/medinaparra/freecadandroid/viewmodel/: CadViewModel.kt
app/src/main/python/: Part.py
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
build_occt_arm64-v8a/: .ninja_deps  .ninja_log
copy_payload/: payload-001.txt  payload-android-loader.txt
docs/: ARCHITECTURE.md  BUILD_ANDROID.md  FREECAD_PORTING_PLAN.md  LICENSE_COMPLIANCE.md
scripts/: build_opencascade_android.sh  fetch_native_sources.sh  setup_android_env.sh  verify_native_artifacts.sh
